Bug 1804583 - image orientation should be used for data url requests. r=emilio

- Images with a data url source should be treated as same-origin requests,
   meaning that the image-orientation should be respected.
 - Add web platform test for a image with a data url source and
   image-orientation: none.
 - Fix the blob url test for image-orientation: none.

Differential Revision: https://phabricator.services.mozilla.com/D164237